# bib_db

./: .gitignore  Cargo.toml  Class Project Summary.md  Proposal.md  README.md
bibliographic_db/: bib_data.db  bib_data.db-shm  bib_data.db-wal  db.json
migrations/: 20231021170609_master_tables.sql
src/: .env.rs  app.rs  db.rs  editor.rs  main.rs  ui.rs
tests/: integration_tests.rs
