[package]
name = "bib_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "^0.24.0"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
tui-textarea = "^0.3.0"
sqlite = "0.32.0"
#sqlx = {version = "0.7.0", features = ["runtime-tokio", "tls-native-tls"] }
#tokio = {version = "1.30.0"}

#diesel = {version = "2.1.0", features = ["sqlite"]}
#dotenvy = "0.15.7"
#libsqlite3-sys = {version = "0.26.0", features = ["bundled"]}


[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
